resolving layout issues on oeuvres page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -122,6 +122,7 @@ h4 {
   padding-right: 0px !important;
 }
 
+
 #map_index {
   width: 100%;
   height: 250px;
@@ -189,12 +190,17 @@ a:hover {
 .right-list {
   height: 30vh;
   overflow: auto;
-  margin-bottom: 5%;
 }
 @media (min-width: 720px)  {
   .right-list {
    height:100vh;
   }
+}
+
+@media (min-width: 768px) {
+  #containerMap{
+  padding-right: 45px;
+}
 }
 
 .table-dark2 {
